Pull request #125: Refactor Validation Result storage model
Merge in NETAUTO/lvv-service from refactor_validation_results to master

Squashed commit of the following:

commit cfcd8b61358e1a63bc1e41254c880a991f1e696c
Author: ansaagra <anshul.v.agrawal@oracle.com>
Date:   Sat Jan 31 20:52:09 2026 -0600

    store validation results as Json instead of separate columns